Done: scrollbar. Fixed some bugs

--- a/src/components/css/tv-channels.css
+++ b/src/components/css/tv-channels.css
@@ -1,5 +1,5 @@
 .tv-channels__item {
-    width: 1180px;
+    width: 1170px;
     height: 162px;
     border-radius: 8px;
     display: flex;
@@ -16,11 +16,11 @@
     padding: 7px 0;
 }
 
-.tv-channels {
+/* .tv-channels {
     overflow-y: scroll;
     height: 696px;
-}
-.tv-channels::-webkit-scrollbar {
+} */
+/* .tv-channels::-webkit-scrollbar {
     background: #F2F2F2;
     width: 8px;
     border-radius: 2px;
@@ -28,7 +28,7 @@
 .tv-channels::-webkit-scrollbar-thumb {
     background: #BDBDBD;
     border-radius: 2px;
-}
+} */
 
 .tv-channels__img-section {
     display: flex;
